# OpenGL

./: Cargo.toml  README.md
assets/models/: Test.mtl
assets/shaders/: fragment_shader.frag  vertex_shader.vert
src/: lib.rs  main.rs
src/lib/: buffer.rs  mesh.rs  mod.rs  objparser.rs  shader.rs  vertex_array.rs
