[package]
name = "OpenGL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck="1.13.1"
ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}

beryllium = "0.2.0-alpha.4"
imagine = "0.4.0"
cgmath="0.18.0"
cstr="0.2.11"
tobj="3.2.4"
colored = "2"

#![feature(core_intrinsics)]
#![feature(default_free_fn)]